Format Java files using Eclipse Neon and Vaadin settings
Using the same formatting in the 7.7 branch and the master branch
eases porting of fixes

Change-Id: I51b4693f2f120447702cf322ce4505608ad92987