@@ -1,12 +1,12 @@
 /*
  * Copyright 2000-2014 Vaadin Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
  * the License at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
@@ -33,7 +33,7 @@ public class ManifestWriter {
 
     /**
      * Writes a manifest attribute to a temporary buffer.
-     * 
+     *
      * @param name
      *            Attribute name
      * @param value
@@ -56,10 +56,10 @@ public class ManifestWriter {
 
     /**
      * Writes the manifest to given JAR file.
-     * 
+     *
      * The manifest must be created with {@code #writeAttribute(String, String)}
      * before calling this write.
-     * 
+     *
      * @param jarFilename
      *            File name of the JAR in which the manifest is written
      * @return 0 on success, nonzero value on error
@@ -85,9 +85,9 @@ public class ManifestWriter {
                 fos.write(getBytes());
                 fos.close();
             } catch (IOException e) {
-                System.err.println("Writing to file '"
-                        + newMfFile.getAbsolutePath() + "' failed because: "
-                        + e.getMessage());
+                System.err.println(
+                        "Writing to file '" + newMfFile.getAbsolutePath()
+                                + "' failed because: " + e.getMessage());
                 status = 1;
             }
         }
@@ -100,9 +100,9 @@ public class ManifestWriter {
                 is = new FileInputStream(newMfFile);
                 checkMf.read(is);
             } catch (IOException e) {
-                System.err.println("Reading from file '"
-                        + newMfFile.getAbsolutePath() + "' failed because: "
-                        + e.getMessage());
+                System.err.println(
+                        "Reading from file '" + newMfFile.getAbsolutePath()
+                                + "' failed because: " + e.getMessage());
                 status = 1;
             }
         }
@@ -112,8 +112,8 @@ public class ManifestWriter {
             System.out.println("Updating manifest in JAR " + jarFilename);
             try {
                 // The "mf" order must correspond with manifest-jarfile order
-                Process process = Runtime.getRuntime().exec(
-                        new String[] { "jar", "umf",
+                Process process = Runtime.getRuntime()
+                        .exec(new String[] { "jar", "umf",
                                 newMfFile.getAbsolutePath(), jarFilename });
                 int exitValue = process.waitFor();
                 if (exitValue != 0) {
@@ -123,14 +123,14 @@ public class ManifestWriter {
                     while (reader.ready()) {
                         System.err.println("jar: " + reader.readLine());
                     }
-                    System.err
-                            .println("The 'jar' command returned with exit value "
+                    System.err.println(
+                            "The 'jar' command returned with exit value "
                                     + exitValue);
                     status = 1;
                 }
             } catch (IOException e) {
-                System.err.println("Failed to execute 'jar' command. "
-                        + e.getMessage());
+                System.err.println(
+                        "Failed to execute 'jar' command. " + e.getMessage());
                 status = 1;
             } catch (InterruptedException e) {
                 System.err
